Fix social icons not showing

--- a/css/main.css
+++ b/css/main.css
@@ -153,11 +153,11 @@ ul.social li {
 }
 
 li.tasklogue {
-	background: url(../assets/tasklogue.svg) no-repeat center rgba(136, 125, 230, 0.1);
+	background: url(../assets/Tasklogue.svg) no-repeat center rgba(136, 125, 230, 0.1);
 }
 
 li.email {
-	background: url(../assets/email.svg) no-repeat center rgba(230, 125, 193, 0.1);
+	background: url(../assets/Email.svg) no-repeat center rgba(230, 125, 193, 0.1);
 }
 
 li.dribbble {
@@ -165,11 +165,11 @@ li.dribbble {
 }
 
 li.instagram {
-	background:  url(../assets/instagram.svg) no-repeat center, linear-gradient(45deg, rgba(188, 97, 218, 0.1) 0%, rgba(87, 125, 255, 0.1) 100%);
+	background:  url(../assets/Instagram.svg) no-repeat center, linear-gradient(45deg, rgba(188, 97, 218, 0.1) 0%, rgba(87, 125, 255, 0.1) 100%);
 }
 
 li.twitter {
-	background: url(../assets/twitter.svg) no-repeat center rgba(29, 160, 242, 0.1);
+	background: url(../assets/Twitter.svg) no-repeat center rgba(29, 160, 242, 0.1);
 }
 
 
